[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/MenuInterfaces/InventoryMenu/InventoryItem.gd" type="Script" id=1]
[ext_resource path="res://src/MenuInterfaces/442161__isteak__enter-button-low-robotic.wav" type="AudioStream" id=2]

[node name="InventoryItem" type="Node"]
script = ExtResource( 1 )

[node name="PopupMenu" type="PopupMenu" parent="."]
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Examine" type="Label" parent="PopupMenu"]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConsumeSound" type="AudioStreamPlayer" parent="."]

[node name="IdentitySound" type="AudioStreamPlayer" parent="."]

[node name="NameToSpeech" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Name" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}
